--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -141,3 +141,26 @@ badge*/
     padding-left: 0;
   }
 }
+
+/*icon*/
+.icon {
+  width: 40px;
+  height: 40px;
+}
+
+.icon--primary {
+  fill: var(--color-primary);
+}
+.icon--secondary {
+  fill: var(--color-secondary);
+}
+
+.icon-container {
+  background-color: #f3f9fa;
+  width: 60px;
+  height: 64px;
+  border-radius: 100%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+}
